--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "@puppeteer/browsers": "^2.10.5",
     "axios": "^1.9.0",
-    "cheerio": "^1.1.0",
+    "cheerio": "1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "puppeteer-core": "^21.0.0",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "undici": "5.28.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
